# Zeta

./: .gitignore  Cargo.toml  README.md
docs/: index.html  playground.html  playground.js  shared.css
examples/: build_zetac.rs  parity_check.rs
kernel/: README.md  boot.s  build.sh  kernel.ld  kmain.zeta  run.sh  runtime.c
src/: ast.rs  codegen.rs  desugar.rs  diagnostic.rs  hir.rs  lexer.rs  lib.rs  line_editor.rs  main.rs  mir.rs  module_graph.rs  move_analysis.rs  parser.rs  repl.rs  resolver.rs  runtime.rs  std_api.rs  std_prelude.rs  type_syntax.rs  typecheck.rs  wasm.rs
testdata/: core_items.ast  core_items.hir  core_items.zeta  generic_hashmap.zeta  generic_hashmap_ops.zeta  generic_hashset.zeta  run_array.mir  run_array.zeta  run_array_builder.mir  run_array_builder.zeta  run_assign.zeta  run_basic.zeta  run_bitwise.zeta  run_bool_logic.zeta  run_branch.zeta  run_call.zeta  run_compare.zeta  run_compound.zeta  run_elif.zeta  run_enum.mir  run_enum.zeta  run_enum_payload.mir  run_enum_payload.zeta  run_for.zeta  run_forc.zeta  run_forrange.zeta  run_io_path_diagnostic.mir  run_io_path_diagnostic.zeta  run_loop_control.mir  run_loop_control.zeta  run_match.mir  run_match.zeta  run_mod.zeta  run_mut.mir  run_mut.zeta  run_neg.zeta  run_std_core.zeta  run_string_build.mir  run_string_build.zeta  run_string_scan.mir  (+4 more)
tests/: ast_dump.rs  builtin_option_result.rs  closure.rs  codegen_aot.rs  codegen_aot_frontend.rs  codegen_array.rs  codegen_block_closure.rs  codegen_closure.rs  codegen_dynarray.rs  codegen_enum.rs  codegen_extern.rs  codegen_float.rs  float.rs  (+53 more)
(+389 files in other folders)
